<resources>
    <string name="app_name">Projet_E5</string>
    <string name="app_login">Login</string>
    <string name="default_textV_login">Email</string>
    <string name="default_textV_password">Mot de passe</string>
    <string name="app_version">Version V1.1</string>
    <string name="app_home">Home</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="pas_de_compte">Pas de compte ? Créez-en un</string>
    <string name="app_inscription">Inscription</string>
    <string name="app_prenom">Prénom</string>
    <string name="app_nom">Nom</string>
    <string name="app_tele">Téléphone</string>
    <string name="app_naissance">Date de naissance</string>
    <string name="app_mot_de_passe_confirme">Mot de passe confirmer</string>
    <string name="app_address">Address</string>
    <string name="app_Je_suis_médecin">Je suis médecin</string>
    <string name="todo">TODO</string>
    <string name="app_se_déconnecter">se déconnecter</string>
    <string name="app_nomprenom">Nom / Prénom </string>
    <string name="app_save">Sauvegarder les modifications</string>
    <string name="textview">TextView</string>
    <string name="app_mdp_oublie">mdp_oublie</string>
    <string name="app_change_mdp">Changer le mot de passe</string>
    <string name="app_title1">Trouvez un rendez-vous avec</string>
    <string name="app_title2">un médecin</string>
    <string name="app_connecter">Se connecter</string>
    <string name="title_img">title_img</string>
    <string name="app_specialiste">spécialiste</string>
    <string name="app_horaires">Horaires</string>
    <string name="inscription_pro">inscription_pro</string>
</resources>