<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="414dp"
        android:layout_height="293dp"
        android:background="#405CF4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="56dp"
            android:text="@string/app_title1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="92dp"
            android:text="@string/app_title2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_pageLogin"
            android:layout_width="158dp"
            android:layout_height="48dp"
            android:layout_marginTop="132dp"
            android:background="@drawable/btn_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/app_connecter"
            android:textStyle="normal"
            android:textColor="@drawable/btn_selector"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintOverlap" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="306dp"
            android:layout_height="170dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="124dp"
            android:contentDescription="@string/title_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/title_img"
            tools:ignore="VisualLintBounds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>